# orm

./: Cargo.toml  syntax.xmind
client/: Cargo.toml  build.rs
client/src/: entity.in.rs  main.rs  test.rs
src/: anno.rs  attr.rs  cond.rs  db.rs  entity.rs  execute.rs  formatter.rs  init.rs  insert.rs  lib.rs  macros.rs  main.rs  meta.rs  rustfmt.rs  select.rs  session.rs  sql.rs  table.rs  types.rs  value.rs  visitor.rs
src/lazy_static_macro/: lazy.rs  mod.rs
