[package]
name = "orm"
version = "0.1.2"
authors = ["yml <yuemenglong@126.com>"]
description = "A ORM framework written in Rust"
license = "MIT/Apache-2.0"

[dependencies]
syntex = "*"
syntex_syntax = "*"
syntex_errors = "*"
mysql = "*"
regex = "0.2"
rustc-serialize = "0.3"
itertools = "0.5.9"
log = "*"
