[package]
name = "orm"
version = "0.2.0"
authors = ["yml <yuemenglong@126.com>"]
description = "A ORM framework written in Rust, unfinished yet"
license = "MIT/Apache-2.0"

[dependencies]
syntex = "0.58.1"
syntex_syntax = "0.58.1"
syntex_errors = "0.58.1"
mysql = "11.0.0"
regex = "0.2"
rustc-serialize = "0.3"
itertools = "0.5.9"
